syntax = "proto3";
package zrchain.policy;

option go_package = "github.com/Zenrock-Foundation/zrchain/v6/x/policy/types";

// defines IBC packet for identity module
message PolicyPacketData {
  // defines packet
  oneof packet { NoData no_data = 1; }
}

// defines data for the IBC packet
message NoData {}
